--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active" href="#0">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul> 
+      </nav>
+      <a class="header__logo">
+        <img 
+          class="header__logo-image"
+          src="./images/logo-black.svg" 
+          alt="Логотип проекта"
+        />
+      </a>
+
+      <address class="header__address address">
+        <ul class="address__links-list">
+          <li>
+            <a class="addres__link" href="tel:+99995555555">+9 999 555 5555</a>
+          </li>
+          <li>
+            <a class="addres__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          </li>
+          <li>
+            <p>
+              наб. Принсенграхт 263-<br/> 265, Амстердам
+            </p>
+          </li>
+        </ul>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <h1 class="cover__title">
+          <span class="accent__span"></span>
+          <span class="accent__span text__center"></span>
+          <span class="accent__span text__right"></span>
+        </h1>
+        <div class=".description">
+          <p>
+
+          </p>
+        </div>
+      </section>
+      <section class="lots">
+
+      </section>
+      <section class="about">
+
+      </section>
+    </main>
+    <footer class="footer">
+
+    </footer>
+  </body>
 </html>
