--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
     </header>
     <main>
       <section class="cover">
+        <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="accent__span"></span>
-          <span class="accent__span text__center"></span>
-          <span class="accent__span text__right"></span>
+          <span class="aligned-text">ОНО</span>
+          <span class="aligned-text_center">ТЕБ<span class="no-letter-spacing">Е</span></span>
+          <span class="aligned-text_right">НАД<span class="no-letter-spacing">О</span></span>
         </h1>
-        <div class=".description">
-          <p>
-
-          </p>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button class="bet-button">
+            Сделать ставку
+          </button>
         </div>
       </section>
       <section class="lots">
