--- a/index.html
+++ b/index.html
@@ -32,19 +32,9 @@
         />
       </a>
       <address class="header__address address">
-        <ul class="address__links-list">
-          <li>
-            <a class="addres__link" href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a class="addres__link" href="mailto:info@sobaka.ge"
-              >info@sobaka.ge</a
-            >
-          </li>
-          <li>
-            <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
-          </li>
-        </ul>
+        <a class="addres__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="addres__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-<br />265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -60,10 +50,10 @@
           >
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
+          <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
-          </h2>
-          <button class="bet-button">Сделать ставку</button>
+          </p>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
@@ -71,11 +61,11 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card card_type_film">
+              <article class="card card_type_film card_background">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h2>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -86,11 +76,11 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card card_type_book">
+              <article class="card card_type_book card_background">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h2>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -104,11 +94,11 @@
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <article class="card card_type_picture">
+              <article class="card card_type_picture card_background">
                 <div class="overlay"></div>
-                <h2 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h2>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -151,19 +141,9 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <ul class="address__links-list">
-          <li>
-            <a class="addres__link" href="tel:+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a class="addres__link" href="mailto:info@sobaka.ge"
-              >info@sobaka.ge</a
-            >
-          </li>
-          <li>
-            <p>наб. Принсенграхт 263-265, Амстердам</p>
-          </li>
-        </ul>
+        <a class="addres__link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="addres__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -182,7 +162,7 @@
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a target="_blank" href="#0" class="footer__social-link">
             <img
               src="./images/yt.svg"
               alt="Логотип Youtube"
@@ -191,7 +171,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a target="_blank" href="#0" class="footer__social-link">
             <img
               src="./images/vk.svg"
               alt="Логотип VK"
@@ -200,7 +180,7 @@
           </a>
         </li>
         <li class="footer__social-list-item">
-          <a href="#0" class="footer__social-link">
+          <a target="_blank" href="#0" class="footer__social-link">
             <img
               src="./images/pinterest.svg"
               alt="Логотип Pinterest"
